2009-08-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make shell scripts more robust. 

	This allows for example to run `slc -DPACKAGE_NAME=\"foo bar\"',
	as Automake does. Previously the spaces and quoted quotes would
	confuse command line construction in `slc'.
	
	* tools/bin/slr.in,
	* tools/bin/slc.in,
	* tools/bin/slt.in,
	* tools/bin/cce.in,
	* tools/bin/slt-many.in: Use array variables where appropriate.

	* tools/lib/r-host.sh,
	* tools/lib/r-mtsparc-sim.sh.in, 	
	* tools/lib/r-mtalpha-sim.sh.in: Properly handle the case where
	there are no remaining command-line parameters.

2009-08-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate preprocessor flags for dependency tracking.
	
	* tools/bin/slc.in: Reinstate the `-M' flags. Pass `-A'. Simplify.

2009-08-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Support new compilation stage `E'.

	This stage transforms `.s' files to `.t.s' before passing them to
	the assembler. This is groundwork to add generic assembly
	optimizations valid across compilers, such as adding 'swch' on MT
	asembly.
	
	* tools/bin/cce.in: Set `slc_filter1' and `slc_filter2' instead of `slc_filter'. 

	* tools/bin/slc.in: Use them. Support new flag `-S1'.

	* tools/bin/slt.in: Support the new exit code. Document accordingly.
	
2009-08-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Rename thread symbols in SL->mtalpha compilation.

	This makes it more obvious when looking at the generated assembly
	where the mangled names come from.
	
	* tools/bin/spp,	
	* tools/lib/t-pppalpha/include/sl_support.h: Change the prefix of
	renamed thread functions to `__slf_' instead of `_x_'.

2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend test suite.

	* lib/tests/assert.c: New.

2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notices.
	
	* reheader.pl: Drop support for `sl_begin_header' and
	`sl_end_header'. Simplify.
	
	* Makefile.am: Adapt target `rehead', but avoid changing
	the (imported) source for `dlmalloc'.
	